<resources>
    <string name="app_name">Scious</string>
    <string name="action_next">Next</string>
    <string name="action_save">Save</string>
    <string name="action_skip">Skip</string>
    <string name="action_get_started">Get Started</string>
    <string name="welcome_to_scious">Welcome to Scious</string>
    <string name="we_are_help_people">We are help people to manage stress</string>
    <string name="are_you_stressed_out">Are you stressed out?</string>
    <string name="we_have_been_here">We have been here to help you to resolve stress</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="activity_or">Or</string>
    <string name="google_plus">Google+</string>
    <string name="all_field_required">All field required</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="weight_cannot_be_empty">Weight cannot be empty</string>
    <string name="height_cannot_be_empty">Height cannot be empty</string>
    <string name="please_retype_password">Please retype password</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_too_short">Password to short</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="register_successfull">Register successfull :)</string>
    <string name="didnt_have_account">Didn\'t have account? </string>
    <string name="create_one">Create one</string>
    <string name="already_have_account">Already have account? </string>
    <string name="login_here">Login here</string>
    <string name="you_almost_done">You almost done :)</string>

    <string name="stop_scanning">Stop scanning</string>
    <string name="enable_bluetooth_to_discover_device">Enable Bluetooth to discover devices.</string>
    <string name="start_scanning">Start scanning</string>
    <string name="action_activity">Activity</string>
    <string name="action_history">History</string>
    <string name="action_learns">Learns</string>
    <string name="action_articles">Articles</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="find_device">Find device</string>
    <string name="device_with_rssi">%1$s (%2$s)</string>
    <string name="mi_band_not_connected">Mi Band not connected</string>
    <string name="bpm">bpm</string>
    <string name="stop_measuring">Stop measuring</string>
    <string name="start_measuring">Start measuring</string>
    <string name="connecting_to_band">Connecting to Band...</string>
    <string name="measuring">Measuring</string>
    <string name="connect_to_mi_band">Connect to Mi Band</string>
    <string name="ble_not_supported">Bluetooth LE not supported</string>
    <string name="discovery_trying_to_connect_to">Trying to connect to: %1$s</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_articles">Articles</string>
    <string name="title">Title</string>
    <string name="date">2017/31/10</string>

    <string name="device_not_connected">Device not connected</string>
    <string name="not_connected">Not connected</string>
    <string name="waiting_for_connect">Waiting for reconnect</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="initializing">Initializing</string>
    <string name="authentication_required">Authentication required</string>
    <string name="authenticating">Authenticating</string>
    <string name="initialized">Initialized</string>
    <string name="unknown_state">Unknown state</string>
    <string name="bluetooth_is_not_supported">Bluetooth is not supported</string>
    <string name="bluetooth_is_disabled">Bluetooth is disabled</string>
    <string name="unknown">Unknown</string>
    <string name="n_a">N/A</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="heart_rate">Heart rate</string>
    <string name="steps">Steps</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="battery">Battery</string>

    <string name="dateformat_time">Time</string>
    <string name="dateformat_date_time"><![CDATA[Time & date]]></string>
    <string name="cannot_connect">Can\'t connect: %1$s</string>
    <string name="stop_vibrate">Done!</string>
    <string name="busy_task_fetch_activity_data">Fetching activity data</string>
    <string name="mi2_prefs_button_press_broadcast_default_value">MiBand 2 button press</string>
    <string name="discovery_attempting_to_pair">Attempting to pair with %1$s</string>
    <string name="discovery_bonding_failed_immediately">Bonding with %1$s failed immediately.</string>
    <string name="discovery_successfully_bonded">Successfully bonded with %1$s.</string>

    <string name="cannot_pair_no_mac">No MAC address, cannot be pair.</string>
    <string name="pairing_already_bonded">Already bonded with %1$s, connecting...</string>
    <string name="pairing_in_progress">Bonding in progress: %1$s</string>
    <string name="pairing_creating_bond_with">"Creating bond with %1$s (%2$s)"</string>
    <string name="pairing_unable_to_pair">Unable to pair with %1$s</string>
    <string name="device_info">Device Info</string>
    <string name="vibrate">Vibrate</string>
    <string name="delete_device">Delete device</string>
    <string name="long_press_to_disconnect">Long press to disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="ask_delete_device">Delete %1$s</string>
    <string name="delete_device_dialog_message">This will delete device!</string>
    <string name="action_delete">Delete</string>
    <string name="cutomize_your_profile">Customize your profile</string>
    <string name="scious_running">Scious is running</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="mean_hr">Heartbeat</string>
    <string name="mean_rr">RR</string>
    <string name="your_mood">Mood</string>
    <string name="saving_result">Saving result</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="stress_level">Stress level</string>
    <string name="history_time">Time</string>
    <string name="high_stress">High Stress</string>
    <string name="medium_stress">Medium Stress</string>
    <string name="low_stress">Low Stress</string>
    <string name="no_stress">No Stress</string>
    <string name="prefs_user_device">Device</string>
    <string name="prefs_display_items">Display items</string>
    <string name="prefs_display_items_summary">Item displayed on the band screen</string>
    <string name="dateformat">Date format</string>
    <string name="prefs_title_mi_band2_address">Mi Band 2 address</string>
    <string name="connecting_to_miband2">Connecting to Mi Band 2</string>
    <string name="miband2_pairing_tap">When your Mi Band 2 vibrates and blink, tap it.</string>
    <string name="pairing_info">If your device can\'t connected, please reboot your device and try to reconnecting.</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="weight_label">Weight (kg)</string>
    <string name="height_label">Height (cm)</string>
    <string name="birthday_label">Birthday</string>
    <string name="app_author">Bona Brian Siagian</string>
    <string name="app_email">bonabriansiagian@gmail.com</string>
    <string name="edit_height_label">Edit Height (cm)</string>
    <string name="edit_weight_label">Edit Weight (kg)</string>
    <string name="edit_email_label">Edit Email</string>
    <string name="edit_name_label">Edit Name</string>
    <string name="logout_hint">Are you sure want to logout?</string>
    <string name="see_details">See details</string>
    <string name="hide_details">Hide details</string>
    <string name="see_recommendation">See recommendation</string>
</resources>
