<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/layout_pairing_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical"
        android:padding="@dimen/padding_default">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/connecting_to_miband2"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miband2_pairing_tap"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/gray_light"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_pairing_hint_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_pairing_hint_text"
        android:layout_marginTop="@dimen/margin_content_extra_large"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tap"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_pairing_hint_image"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/margin_content_extra_large"
        android:padding="@dimen/padding_content_extralarge">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:textSize="@dimen/text_size_subtitle"
            android:text="@string/pairing_info"
            android:textAlignment="center"/>

    </LinearLayout>

</RelativeLayout>