<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".login.LoginActivity">
    
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher"/>
        
        <!--Email label-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_default"
            android:layout_marginRight="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:background="@drawable/scious_gradient_button"
            android:paddingLeft="@dimen/padding_default"
            android:paddingRight="@dimen/padding_default"
            android:text="@string/action_login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_subtitle"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/activity_or"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_body"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_gravity="center_horizontal">
            
            <Button
                android:id="@+id/btn_action_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_default"
                android:layout_marginRight="@dimen/margin_default"
                android:background="@drawable/google_button"
                android:paddingLeft="@dimen/padding_default"
                android:paddingRight="@dimen/padding_default"
                android:text="@string/google_plus"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_subtitle"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:textAlignment="center">

            <TextView
                android:id="@+id/didnt_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didnt_have_account"
                android:textSize="@dimen/text_size_body" />

            <TextView
                android:id="@+id/action_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_body_default"
                android:layout_toRightOf="@id/didnt_have_account"
                android:clickable="true"
                android:text="@string/create_one"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_body"/>

        </RelativeLayout>
        
    </LinearLayout>
    
</ScrollView> 