<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/card_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:contentPadding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="Mi Band 2"/>

            <TextView
                android:id="@+id/device_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/device_name"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                tools:text="@string/connecting"/>

            <ImageView
                android:id="@+id/device_info_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:contentDescription="@string/device_info"
                android:background="?android:attr/selectableItemBackground"
                app:srcCompat="@drawable/ic_info_24dp"/>

            <LinearLayout
                android:id="@+id/linear_image_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/device_status"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/device_battery_status_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/device_battery_status"
                        android:layout_gravity="center"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:padding="4dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/level_list_battery"/>

                    <TextView
                        android:id="@+id/battery_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textStyle="bold"
                        android:minWidth="36dp"
                        android:text="Null"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/device_measuring_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/device_measuring"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_gravity="center"
                        android:padding="4dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/beat"/>

                    <TextView
                        android:id="@+id/device_activity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/measuring"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/device_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="4dp"
                    android:padding="8dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/send_vibration"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:padding="4dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_vibration_24dp"/>

                    <TextView
                        android:id="@+id/device_vibrate_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/vibrate"
                        android:textStyle="bold"
                        android:singleLine="true"/>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/device_item_info_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_image_action"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:focusable="false">

                <ListView
                    android:id="@+id/device_item_info"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/device_action_remove"
                    android:focusable="false"
                    android:scrollbars="none"/>

                <ImageView
                    android:id="@+id/device_action_remove"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/delete_device"
                    app:srcCompat="@drawable/ic_delete_24dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
